--- a/news-detail.html
+++ b/news-detail.html
@@ -11,6 +11,8 @@
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <script src="./JS/jQuery/jquery-3.7.1.js"></script>
     <script src="./JS/function.js"></script>
+    <script src="JS/cart.js"></script>
+
     <title>秋季新品 | 最新消息 | 日光小麥所</title>
 </head>
 <body>
@@ -27,10 +29,10 @@
                         <li><a href="products.html">購買麵包</a></li>
                         <li><a href="introduce-bread.html">認識麵包</a></li>
                         <li><a href="qna.html">常見問題</a></li>
-                        <li><a href="#" id="shop-cart">
+                        <li><div id="shop-cart">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
                             <div class="cart-num"></div>
-                        </a></li>
+                        </div></li>
                         <li><a href="#">
                             <i class="fa-solid fa-user" style="color: #401202;"></i>
                         </a></li>
@@ -77,6 +79,15 @@
                 </ul>
             </div>
         </nav>
+        <div class="cart">
+            <div class="upper-area">
+                <h4>購物車</h4>
+                <i class="fa-solid fa-xmark cart-close"></i>
+            </div>
+            <div class="productList">
+                
+            </div>
+        </div>
         <div class="banner">                  
         </div>
         <div class="head-bg">
