update shopping cart

--- a/products-detail.html
+++ b/products-detail.html
@@ -153,7 +153,7 @@
                                 <span class="btn-minus disable" id="btn-minus"><i class="fa-solid fa-minus" style="color: #60222b;"></i>
                                 </span>
                                 <input type="number" value="1" min="1" max="10" class="buy-number"
-                                id ="buy-number"  >
+                                id ="buy-number" readonly >
                                 <span class="btn-plus" id="btn-plus">
                                     <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                                 </span>
